test_programs/compile_failure/similarly_named_types/src/main.nr
pub struct Bar {}

fn main() {
    some_lib::foo(Bar {});
}
